--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>How to use Paticle.Js</title>
+    <link rel="stylesheet" href="styles.css">
+    </head>
+  <body>
+    <div id="particles-js">
+    <script type="text/javascript" src="particles.js"></script>
+    <script type="text/javascript" src="app.js"></script> 
+  </body>
+</html>
