--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     </head>
   <body>
-    <div id="particles-js">
+    <div id="particles-js"></div>
     <script type="text/javascript" src="particles.js"></script>
     <script type="text/javascript" src="app.js"></script> 
   </body>
