--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="particles-js"></div>
     <script type="text/javascript" src="particles.js"></script>
-    <script type="text/javascript" src="app.js"></script> 
+    <script type="text/javascript" src="app.js"></script>
+    <img src="tronerium_logo.png" alt="TroneriumLogo" width="120" height="120">
   </body>
 </html>
