--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Tronerium Guild</title>
- 
+    <link rel="stylesheet" href="style.css">
     </head>
   <body>
-    <img src="tronerium_logo.png" alt="TroneriumLogo" width="120" height="120">
     <div id="particles-js"></div>
+    <img src="tronerium_logo.png" alt="TroneriumLogo" width="120" height="120">
     <script type="text/javascript" src="particles.js"></script>
     <script type="text/javascript" src="app.js"></script>
   </body>
