--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <link rel="stylesheet" href="style.css">
     </head>
   <body>
-    <div id="particles-js"></div>
+    <div id="particles-js">
+      <div class="btext">
+        <h1>Tronerium</h1>
+        <p>Blockchain based system.</p>
+        </div>
+    </div>
     <img src="tronerium_logo.png" alt="TroneriumLogo" width="120" height="120">
     <script type="text/javascript" src="particles.js"></script>
     <script type="text/javascript" src="app.js"></script>
