--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     </head>
   <body>
     <div id="particles-js">
-      <div class="btext">
+      <div class=".btext">
         <h1>Tronerium</h1>
         <p>Blockchain based system.</p>
         </div>
     </div>
     <script type="text/javascript" src="particles.js"></script>
     <script type="text/javascript" src="app.js"></script>
-  </body>
+</body>
 </html>
