--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
   <body>
     <div id="particles-js">
+      <center><img src="tronerium_logo.png" alt="TroneriumLogo" width="120" height="120"></center>
       <div class="btext">
         <h1>Tronerium</h1>
         <p>Blockchain based system.</p>
