--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="particles-js">
       <div class="btext">
+        <img src="tronerium_logo.png" alt="Logo">
         <h1>Tronerium</h1>
         <p>Blockchain based system.</p>
       </div>
