--- a/index.html
+++ b/index.html
@@ -10,17 +10,10 @@
       <div class="btext">
         <img src="tronerium_logo.png" alt="Logo" width="130" height="130">
         <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
         <h1>Tronerium</h1>
-        <br>
-        
-        <br>
-        <br>
         <p>Blockchain based system.</p>
+        <br>
+        <a href="contribution.html" class="btn">Contribute</a>
       </div>
     </div>
     
