--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <h1>Tronerium</h1>
         <p>Blockchain based system.</p>
         <br>
-        <a href="contribution.html" class="btn">Contribute</a> &nbsp <a href="contribution.html" class="btn">Token</a> &nbsp <a href="contribution.html" class="btn">Wallet</a>
+        <a href="contribution.html" class="btn">Contribute</a> &nbsp
+        <a href="contribution.html" class="btn">Token</a> &nbsp 
+        <a href="contribution.html" class="btn">Wallets</a>
       </div>
     </div>
     
