--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h1>Tronerium</h1>
         <p>Blockchain based system.</p>
         <br>
-        <a href="contribution.html" class="btn">Claim</a> &nbsp
-        <a href="contribution.html" class="btn">Token</a> &nbsp 
-        <a href="contribution.html" class="btn">Wallet</a>
+        <a href="https://tronerium.github.io/claim/" class="btn">Claim</a> &nbsp
+        <a href="https://tronerium.github.io/token/" class="btn">Token</a> &nbsp 
+        <a href="https://tronerium.github.io/wallet/" class="btn">Wallet</a>
       </div>
     </div>
     
