--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Tronerium</h1>
         <p>Blockchain based system.</p>
         <br>
-        <a href="https://tronerium.github.io/claim/" class="btn">Airdrop</a> &nbsp
+        <a href="https://tronerium.github.io/airdrop/" class="btn">Airdrop</a> &nbsp
         <a href="https://tronerium.github.io/token/" class="btn">Token</a> &nbsp 
         <a href="https://tronerium.github.io/wallet/" class="btn">Wallet</a>
       </div>
