--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img src="tronerium_logo.png" alt="Logo" width="130" height="130">
         <br>
         <h1>Tronerium</h1>
-        <p>Blockchain based system.</p>
+        <p>Blockchain based system, Accelerating the adoption of blockchain technology for average user. </p>
         <br>
         <a href="https://tronerium.github.io/airdrop/" class="btn">Airdrop</a> &nbsp
         <a href="https://tronerium.github.io/token/" class="btn">Token</a> &nbsp 
