--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <a href="https://tronerium.github.io/airdrop/" class="btn">Airdrop</a> &nbsp
         <a href="https://tronerium.github.io/token/" class="btn">Token</a> &nbsp 
         <a href="https://tronerium.github.io/wallet/" class="btn">Wallet</a>
+        <br>
+        <img src="poweredbyethereum-small.png" alt="pethereum">
       </div>
     </div>
     
