--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tronerium Guild</title>
+    <title>Xerberium Guild</title>
     <link rel="stylesheet" href="style.css">
     </head>
   <body>
     <div id="particles-js">
       <div class="btext">
-        <img src="tronerium_logo.png" alt="Logo" width="130" height="130">
+        <img src="xerberiumlogo.png" alt="Logo" width="130" height="130">
         <br>
         <h1>Tronerium</h1>
         <p>Blockchain based system, Accelerating the adoption of blockchain technology for average user. </p>
         <br>
-        <a href="https://tronerium.github.io/airdrop/" class="btn">Airdrop</a> &nbsp
-        <a href="https://tronerium.github.io/token/" class="btn">Token</a> &nbsp 
-        <a href="https://tronerium.github.io/wallet/" class="btn">Wallet</a>
+        <a href="https://xerberium.github.io/airdrop/" class="btn">Airdrop</a> &nbsp
+        <a href="https://xerberium.github.io/token/" class="btn">Token</a> &nbsp 
+        <a href="https://xerberium.github.io/wallet/" class="btn">Wallet</a>
         <br>
         <img src="poweredbyethereum-small.png" alt="pethereum">
       </div>
