--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div class="btext">
         <img src="xerberiumlogo.png" alt="Logo" width="130" height="130">
         <br>
-        <h1>Tronerium</h1>
+        <h1>Xerberium</h1>
         <p>Blockchain based system, Accelerating the adoption of blockchain technology for average user. </p>
         <br>
         <a href="https://xerberium.github.io/airdrop/" class="btn">Airdrop</a> &nbsp
