--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <img src="xerberiumlogo.png" alt="Logo" width="130" height="130">
         <br>
         <h1>Xerberium</h1>
-        <p>Blockchain based system, Accelerating the adoption of blockchain technology for average user. </p>
+        <br>
+        <h2>Blockchain based system, Accelerating the adoption of blockchain technology for average user.</h2>
         <br>
         <a href="https://xerberium.github.io/airdrop/" class="btn">Airdrop</a> &nbsp
         <a href="https://xerberium.github.io/token/" class="btn">Token</a> &nbsp 
