--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Xerberium Guild</title>
+    <title>Xerverium|Home</title>
     <link rel="stylesheet" href="style.css">
     </head>
   <body>
     <div id="particles-js">
       <div class="btext">
-        <img src="xerberiumlogo.png" alt="Logo" width="130" height="130">
+        <img src="xerveriumlogo.png" alt="Logo" width="130" height="130">
         <br>
-        <h1>Xerberium</h1>
+        <h1>Xerverium</h1>
         <br>
         <h2>Blockchain based system, Accelerating the adoption of blockchain technology for average user.</h2>
         <br>
-        <a href="https://xerberium.github.io/airdrop/" class="btn">Airdrop</a> &nbsp
-        <a href="https://xerberium.github.io/token/" class="btn">Token</a> &nbsp 
-        <a href="https://xerberium.github.io/wallet/" class="btn">Wallet</a>
+        <a href="https://xerverium.github.io/airdrop/" class="btn">Airdrop</a> &nbsp
+        <a href="https://xerverium.github.io/token/" class="btn">Token</a> &nbsp 
+        <a href="https://xerverium.github.io/wallet/" class="btn">Wallet</a>
         <br>
         <img src="poweredbyethereum-small.png" alt="pethereum">
       </div>
