--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
         <a href="https://xerverium.github.io/wallet/" class="btn">Wallet</a>
         <br>
         <img src="poweredbyethereum-small.png" alt="pethereum">
+        <br>
+        <a href="https://twitter.com/xerverium" target="_blank">
+  <img src="twitter-bird-logo.png" alt="Twitter" style="width:20px;height:20px;border:0">
+</a> &nbsp
+        <a href="https://t.me/xerverium" target="_blank">
+  <img src="telegram-logo.png" alt="Telegram" style="width:20px;height:20px;border:0">
+</a>
       </div>
     </div>
     
