--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h2>Blockchain based system, Accelerating the adoption of blockchain technology for average user.</h2>
         <br>
         <a href="https://xerverium.github.io/airdrop/" class="btn">Airdrop</a> &nbsp
+        <a href="https://xerverium.github.io/offer/" class="btn">Offer</a> &nbsp
         <a href="https://xerverium.github.io/token/" class="btn">Token</a> &nbsp 
         <a href="https://xerverium.github.io/wallet/" class="btn">Wallet</a>
         <br>
